<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Traffic monitoring</string>
    <string name="notification">Traffic monitoring has been launched</string>
    <string name="traffc_exceed_notification">Your Traffic has exceed the warning value , please mind</string>
    <string name="all_apps">Applications</string>
    <string name="app_traffic">Traffic</string>
    <string name="warning">Warning</string>
    <string name="gprs_warning">2G/3G traffic has exceed the max value.Close the network or paying extra fee?</string>
    <string name="wifi_warning">"Wifi traffic has exceed the max value.\nClose wifi or not?</string>
    
    <!-- for text view -->
    <string name="titleview">Traffic monitoring</string>
    <string name="wifi_title_view">WIFI Traffic</string>
    <string name="gprs_title_view">2G/3G Traffic</string>
    <string name="day_traffic_view">Current:</string>
    <string name="month_traffic_view">Month  :</string>
    <string name="month_traffic_left_view">Remaining:</string>
    <string name="today">Today:</string>
    <string name="lastmonth_gprs_traffic_view">Last month:</string>
    <string name="menu_more">More</string>
    <string name="back">Back</string>
    <string name="illegal_input">Illegal input</string>
    <string name="input_hint">please input number</string>
    
    <string name="on">On</string>
    <string name="off">Off</string>
    
    <!-- for menu item -->
    <string name="menu_settings">Setting</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="firewall">Fire wall</string>
    <string name="help_dialog_title">Help</string>
    <string name="close_me">Close</string>
    <string name="close_network">Close network</string>
    <string name="help_msg">Traffic monitoring can monitor the traffic you phone has used. More information please access <i>web.cellon.com</i></string>
    
    <!-- for preferences -->
    <string name="traffic_setting_category">Traffic Setting</string>
    <string name="max_month_gprs_title">2G/3G Max traffic</string>
    <string name="max_month_wifi_title">WIFI Max traffic</string>
    <string name="max_month_gprs_summery">2G/3G Warning value:</string>
    <string name="max_month_wifi_summery">WIFI Warning value:</string>
    <string name="max_month_gprs_setting">Pleas set the max traffic of 2G/3G</string>
    <string name="max_month_wifi_setting">Pleas set the max traffic of WIFI</string>
    
    <string name="power_on_setting_category">Settings</string>
    <string name="power_on_setting_title">Launch when power on</string>
    <string name="view_setting_title">Close the floating view</string>
    
    <string name="traffic_correction_category">Correct traffic</string>
    <string name="gprs_used_title">2G/3G Used</string>
    <string name="gprs_used_summery">2G/3G Used:</string>
    <string name="wifi_used_title">WIFI Used</string>
    <string name="wifi_used_summery">WIFI Used:</string>
    
    <string name="traffic_is_less_msg">your 2G/3G traffic is less than 10M</string>
    <string name="traffic_is_less">Tip</string>
    <string name="fee_warning">fee warning</string>
    <string name="fee_warning_msg">your used traffic has exceed Max value</string>
    <string name="traffic_ok">You have enough 2G/3G traffic this month</string>
    <string name="traffic_bad">Your remaining traffic is in warning value, please mind your traffic when access some web site.</string>
        
    <string name="corr_title">Correct traffic setting</string>
    <string name="clear">Clear data</string>
    <string name="corr_summary">Actually used in this month:</string>
    <string name="clear_dialog_title">Sure to clear?</string>
    <string name="clear_dialog_msg">Are you sure to clear all the traffic data？After clearing the data, we suggest restarting the phone, it will be more exact.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_ok">All data has been cleared, please restart the phone</string>
    <string name="isFirstTimeInstalled">Should restart the phone after installed</string>
    <string name="close_data_transmit">Close data transmit</string>
    <string name="pay_off_date">Pay Date</string>
    <string name="choose_payoff_date">Choose payoff date</string>
    <string-array name="pay_date">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
    <string-array name="pay_date_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
    <string name="close_data_network">Close Data network</string>
    <string name="close_wifi">Close wifi network</string>
    <string name="change_mode">Click to change mode</string>
    <string name="m">used: M</string>
    <string name="day">date: day</string>
    <string name="used_detail">Traffic Detail of 2G/3G in this month</string>
    <string name="check_detail">Detail</string>
    
        
        
    <!-- fire wall -->
    <string name="app_name1">DroidWall</string>
    <string name="title_enabled">DroidWall</string>
    <string name="title_disabled">DroidWall(Firewall disabled)</string>
    <string name="showrules">Show rules</string>
    <string name="applyrules">Apply rules</string>
    <string name="saverules">Save rules</string>
    <string name="purgerules">Purge rules</string>
    <string name="setpwd">Set password</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="fw_enabled">Firewall enabled</string>
    <string name="fw_disabled">Firewall disabled</string>
    <string name="log_enabled">Log enabled</string>
    <string name="log_disabled">Log disabled</string>
    <string name="log_was_enabled">Log has been enabled</string>
    <string name="log_was_disabled">Log has been disabled</string>
    <string name="log_cleared">Log cleared</string>
    <string name="show_log">Show log</string>
    <string name="clear_log">Clear log</string>
    <string name="applying_rules">Applying iptables rules.</string>
    <string name="saving_rules">Saving iptables rules.</string>
    <string name="deleting_rules">Deleting iptables rules.</string>
    <string name="rules_applied">Rules applied with success</string>
    <string name="rules_saved">Rules saved with success</string>
    <string name="rules_deleted">Rules deleted with success</string>
    <string name="pass_titleset">Set password lock</string>
    <string name="pass_titleget">Password required</string>
    <string name="enterpass">Enter the password:</string>
    <string name="enternewpass">Enter the new password (leave blank to remove):</string>
    <string name="passdefined">Password lock defined</string>
    <string name="passremoved">Password lock removed</string>
    <string name="passerror">Error changing password lock</string>
    <string name="working">Working...</string>
    <string name="reading_apps">Reading installed applications</string>
    <string name="please_wait">Please wait</string>
    <string name="mode_header">Mode:</string>
    <string name="mode_whitelist">White list (allow selected)</string>
    <string name="mode_blacklist">Black list (block selected)</string>
    <string name="toast_bin_installed">DroidWall: Binary files installed!</string>
    <string name="toast_enabled">DroidWall: Firewall enabled!</string>
    <string name="toast_error_enabling">DroidWall: Error enabling firewall!</string>
    <string name="toast_disabled">DroidWall: Firewall disabled!</string>
    <string name="toast_error_disabling">DroidWall: Error disabling firewall!</string>
	<string name="help_dialog_text"><i>Author: Rodrigo Zechin Rosauro</i>
		\n<i><a href="http://droidwall.googlecode.com">http://droidwall.googlecode.com</a></i>
		\n
		\n<i>DroidWall - Android Firewall</i> is a front-end application for the powerful <b>iptables</b> Linux firewall.
		It allows you to restrict which applications are permitted to access your data networks.
		\nThis is the perfect solution if you don\'t have an unlimited data plan, or just wants to see your battery lasting longer.
		\n
		\n<b>Using DroidWall:</b>
		\n<b>1.</b> Click on <b>Mode</b> to switch between <i>White List</i> and <i>Black List</i> modes.
		\n<b>2.</b> Mark the applications that you want to block or allow (depending on the selected mode), for each interface.
		\n<b>3.</b> Open the menu and enable the firewall. If the firewall is already enabled, just select <b>Apply rules</b>.
		\nThe rules will be saved and automatically restored when you restart your phone.
		\nIf you want to check all current iptables rules, select <b>Show rules</b> in the menu.
		\n
		\n<b>Widget:</b>
		\nTo quickly enable or disable the firewall, add the DroidWall widget to your home screen.
		\n
		\n<b>Firewall logs:</b>
		\nIf you want to see which applications have been blocked by DroidWall, open the menu and enable the Log.
		\nDroidWall will then log each application blocked. You can check the log by opening the menu and selecting <b>More -> Show log</b>.
		\n
		\n<b>Password lock:</b>
		\nYou can set a password lock for DroidWall by using the <b>Set password</b> menu option.
		\nTo remove the password protection, just reset it to blank.
	</string>
	
    <!-- add by baron.hu -->
    <string name="select_mode">Select mode:</string>
    <string name="rules_purged_with_success">Rules purged with success</string>
    <string name="error_installing_binary_files">Error installing binary files:</string>
    <string name="no_root_permission">No root permission</string>
    <string name="need_root_permission">need to get root permission to set the Android firewall</string>
    <string name="i_knew">OK</string>
	<string name="error_refreshing_iptables">error refreshing iptables</string>
	<string name="error_applying_iptables_rules">Error applying iptables rules. Exit code: </string>
	<string name="error_purging_iptables">error purging iptables. exit code: </string>
	<string name="error">error: </string>
	<string name="error_clear_log">Clear log failed</string>
	<string name="error_show_log">Show log failed</string>
	
	<string name="actionbar_activity_not_found">Failed to open intent...</string>
</resources>
